--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "daisyui": "^5.0.35",
+    "dotenv": "^17.2.3",
     "firebase": "^11.10.0",
     "framer-motion": "^12.18.1",
     "install": "^0.13.0",
